--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "axios-cache-interceptor": "^1.5.3",
     "expo": "~51.0.16",
     "expo-status-bar": "~1.12.1",
+    "pokenode-ts": "^1.20.0",
     "react": "18.2.0",
     "react-native": "0.74.2"
   },
