--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native-stack": "^6.10.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "axios-cache-interceptor": "^1.5.3",
     "expo": "~51.0.16",
     "expo-status-bar": "~1.12.1",
     "pokenode-ts": "^1.20.0",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
