--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
     "@react-navigation/native-stack": "^6.10.0",
+    "@react-navigation/stack": "^6.4.0",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "axios-cache-interceptor": "^1.5.3",
@@ -17,11 +19,10 @@
     "expo-status-bar": "~1.12.1",
     "pokenode-ts": "^1.20.0",
     "react": "18.2.0",
-    "react-native": "0.74.2",
-    "react-redux": "^9.1.2",
-    "react-native-web": "~0.19.10",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.2.1"
+    "react-native": "0.74.2",
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
