--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
