--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "pawkedex",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native-stack": "^6.10.0",
     "@react-navigation/stack": "^6.4.0",
-    "@reduxjs/toolkit": "^1.9.3",
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "axios-cache-interceptor": "^1.5.3",
     "expo": "~51.0.16",
@@ -21,15 +21,15 @@
     "pokenode-ts": "^1.20.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.3",
     "react-native-web": "~0.19.10",
-    "react-redux": "^8.1.2",
+    "react-redux": "^9.1.2",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@types/react": "~18.0.28",
-    "typescript": "~5.1.3"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
