--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-screens": "^3.32.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "styled-components": "^6.1.8"
